// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateViewConfigJs can generate fixture ARRAY_PROPS 1`] = `
Map {
  "ARRAY_PROPSNativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'ArrayPropsNativeComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'ArrayPropsNativeComponent',

  validAttributes: {
    names: true,
    disableds: true,
    progress: true,
    radii: true,

    colors: {
      process: require('react-native/Libraries/StyleSheet/processColorArray'),
    },

    srcs: true,
    points: true,
    sizes: true,
    object: true,
    array: true,
    arrayOfArrayOfObject: true,
  },
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture ARRAY_PROPS_WITH_NESTED_OBJECT 1`] = `
Map {
  "ARRAY_PROPS_WITH_NESTED_OBJECTNativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'ArrayPropsNativeComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'ArrayPropsNativeComponent',

  validAttributes: {
    nativePrimitives: true,
  },
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture BOOLEAN_PROP 1`] = `
Map {
  "BOOLEAN_PROPNativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'BooleanPropNativeComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'BooleanPropNativeComponent',

  validAttributes: {
    disabled: true,
  },
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture COLOR_PROP 1`] = `
Map {
  "COLOR_PROPNativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'ColorPropNativeComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'ColorPropNativeComponent',

  validAttributes: {
    tintColor: {
      process: require('react-native/Libraries/StyleSheet/processColor'),
    },
  },
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture COMMANDS 1`] = `
Map {
  "COMMANDSNativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');
const {dispatchCommand} = require(\\"react-native/Libraries/Renderer/shims/ReactNative\\");

let nativeComponentName = 'CommandNativeComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'CommandNativeComponent',
  validAttributes: {},
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);

export const Commands = {
    flashScrollIndicators(ref) {
        dispatchCommand(ref, \\"flashScrollIndicators\\", []);
    },

    allTypes(ref, x, y, z, message, animated) {
        dispatchCommand(ref, \\"allTypes\\", [x, y, z, message, animated]);
    }
};
",
}
`;

exports[`GenerateViewConfigJs can generate fixture COMMANDS_AND_PROPS 1`] = `
Map {
  "COMMANDS_AND_PROPSNativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');
const {dispatchCommand} = require(\\"react-native/Libraries/Renderer/shims/ReactNative\\");

let nativeComponentName = 'CommandNativeComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'CommandNativeComponent',

  validAttributes: {
    accessibilityHint: true,
  },
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);

export const Commands = {
    handleRootTag(ref, rootTag) {
        dispatchCommand(ref, \\"handleRootTag\\", [rootTag]);
    },

    hotspotUpdate(ref, x, y) {
        dispatchCommand(ref, \\"hotspotUpdate\\", [x, y]);
    }
};
",
}
`;

exports[`GenerateViewConfigJs can generate fixture DOUBLE_PROPS 1`] = `
Map {
  "DOUBLE_PROPSNativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'DoublePropNativeComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'DoublePropNativeComponent',

  validAttributes: {
    blurRadius: true,
    blurRadius2: true,
    blurRadius3: true,
    blurRadius4: true,
    blurRadius5: true,
    blurRadius6: true,
  },
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture EVENT_NESTED_OBJECT_PROPS 1`] = `
Map {
  "EVENT_NESTED_OBJECT_PROPSNativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');
const {ConditionallyIgnoredEventHandlers} = require('react-native/Libraries/NativeComponent/ViewConfigIgnore');

let nativeComponentName = 'EventsNestedObjectNativeComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'EventsNestedObjectNativeComponent',

  bubblingEventTypes: {
    topChange: {
      phasedRegistrationNames: {
        captured: 'onChangeCapture',
        bubbled: 'onChange',
      },
    },
  },

  validAttributes: {
    disabled: true,

    ...ConditionallyIgnoredEventHandlers({
      onChange: true,
    }),
  },
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture EVENT_PROPS 1`] = `
Map {
  "EVENT_PROPSNativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');
const {ConditionallyIgnoredEventHandlers} = require('react-native/Libraries/NativeComponent/ViewConfigIgnore');

let nativeComponentName = 'EventsNativeComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'EventsNativeComponent',

  bubblingEventTypes: {
    topChange: {
      phasedRegistrationNames: {
        captured: 'onChangeCapture',
        bubbled: 'onChange',
      },
    },

    topEnd: {
      phasedRegistrationNames: {
        captured: 'onEndCapture',
        bubbled: 'onEnd',
      },
    },
  },

  directEventTypes: {
    topEventDirect: {
      registrationName: 'onEventDirect',
    },

    topOrientationChange: {
      registrationName: 'onOrientationChange',
    },
  },

  validAttributes: {
    disabled: true,

    ...ConditionallyIgnoredEventHandlers({
      onChange: true,
      onEventDirect: true,
      onOrientationChange: true,
      onEnd: true,
    }),
  },
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture EVENTS_WITH_PAPER_NAME 1`] = `
Map {
  "EVENTS_WITH_PAPER_NAMENativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');
const {ConditionallyIgnoredEventHandlers} = require('react-native/Libraries/NativeComponent/ViewConfigIgnore');

let nativeComponentName = 'RCTInterfaceOnlyComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'RCTInterfaceOnlyComponent',

  bubblingEventTypes: {
    paperChange: {
      phasedRegistrationNames: {
        captured: 'onChangeCapture',
        bubbled: 'onChange',
      },
    },
  },

  directEventTypes: {
    paperDirectChange: {
      registrationName: 'onDire tChange',
    },
  },

  validAttributes: {
    ...ConditionallyIgnoredEventHandlers({
      onChange: true,
      onDire tChange: true,
    }),
  },
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture EXCLUDE_ANDROID 1`] = `
Map {
  "EXCLUDE_ANDROIDNativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'ExcludedAndroidComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'ExcludedAndroidComponent',
  validAttributes: {},
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture EXCLUDE_ANDROID_IOS 1`] = `
Map {
  "EXCLUDE_ANDROID_IOSNativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'ExcludedAndroidIosComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'ExcludedAndroidIosComponent',
  validAttributes: {},
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture FLOAT_PROPS 1`] = `
Map {
  "FLOAT_PROPSNativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'FloatPropNativeComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'FloatPropNativeComponent',

  validAttributes: {
    blurRadius: true,
    blurRadius2: true,
    blurRadius3: true,
    blurRadius4: true,
    blurRadius5: true,
    blurRadius6: true,
  },
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture IMAGE_PROP 1`] = `
Map {
  "IMAGE_PROPNativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'ImagePropNativeComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'ImagePropNativeComponent',

  validAttributes: {
    thumbImage: {
      process: require('react-native/Libraries/Image/resolveAssetSource'),
    },
  },
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture INSETS_PROP 1`] = `
Map {
  "INSETS_PROPNativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'InsetsPropNativeComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'InsetsPropNativeComponent',

  validAttributes: {
    contentInset: {
      diff: require('react-native/Libraries/Utilities/differ/insetsDiffer'),
    },
  },
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture INT32_ENUM_PROP 1`] = `
Map {
  "INT32_ENUM_PROPNativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'Int32EnumPropsNativeComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'Int32EnumPropsNativeComponent',

  validAttributes: {
    maxInterval: true,
  },
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture INTEGER_PROPS 1`] = `
Map {
  "INTEGER_PROPSNativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'IntegerPropNativeComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'IntegerPropNativeComponent',

  validAttributes: {
    progress1: true,
    progress2: true,
    progress3: true,
  },
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture INTERFACE_ONLY 1`] = `
Map {
  "INTERFACE_ONLYNativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');
const {ConditionallyIgnoredEventHandlers} = require('react-native/Libraries/NativeComponent/ViewConfigIgnore');

let nativeComponentName = 'RCTInterfaceOnlyComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'RCTInterfaceOnlyComponent',

  bubblingEventTypes: {
    topChange: {
      phasedRegistrationNames: {
        captured: 'onChangeCapture',
        bubbled: 'onChange',
      },
    },
  },

  validAttributes: {
    accessibilityHint: true,

    ...ConditionallyIgnoredEventHandlers({
      onChange: true,
    }),
  },
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture MULTI_NATIVE_PROP 1`] = `
Map {
  "MULTI_NATIVE_PROPNativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'ImageColorPropNativeComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'ImageColorPropNativeComponent',

  validAttributes: {
    thumbImage: {
      process: require('react-native/Libraries/Image/resolveAssetSource'),
    },

    color: {
      process: require('react-native/Libraries/StyleSheet/processColor'),
    },

    thumbTintColor: {
      process: require('react-native/Libraries/StyleSheet/processColor'),
    },

    point: {
      diff: require('react-native/Libraries/Utilities/differ/pointsDiffer'),
    },
  },
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture NO_PROPS_NO_EVENTS 1`] = `
Map {
  "NO_PROPS_NO_EVENTSNativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'NoPropsNoEventsComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'NoPropsNoEventsComponent',
  validAttributes: {},
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture OBJECT_PROPS 1`] = `
Map {
  "OBJECT_PROPSNativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'ObjectProps';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'ObjectProps',

  validAttributes: {
    objectProp: true,
  },
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture POINT_PROP 1`] = `
Map {
  "POINT_PROPNativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'PointPropNativeComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'PointPropNativeComponent',

  validAttributes: {
    startPoint: {
      diff: require('react-native/Libraries/Utilities/differ/pointsDiffer'),
    },
  },
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture STRING_ENUM_PROP 1`] = `
Map {
  "STRING_ENUM_PROPNativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'StringEnumPropsNativeComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'StringEnumPropsNativeComponent',

  validAttributes: {
    alignment: true,
  },
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture STRING_PROP 1`] = `
Map {
  "STRING_PROPNativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'StringPropComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'StringPropComponent',

  validAttributes: {
    accessibilityHint: true,
    accessibilityRole: true,
  },
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "TWO_COMPONENTS_DIFFERENT_FILESNativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'MultiFile1NativeComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'MultiFile1NativeComponent',

  validAttributes: {
    disabled: true,
  },
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);

let nativeComponentName = 'MultiFile2NativeComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'MultiFile2NativeComponent',

  validAttributes: {
    disabled: true,
  },
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture TWO_COMPONENTS_SAME_FILE 1`] = `
Map {
  "TWO_COMPONENTS_SAME_FILENativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');

let nativeComponentName = 'MultiComponent1NativeComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'MultiComponent1NativeComponent',

  validAttributes: {
    disabled: true,
  },
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);

let nativeComponentName = 'MultiComponent2NativeComponent';


export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'MultiComponent2NativeComponent',

  validAttributes: {
    disabled: true,
  },
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);
",
}
`;

exports[`GenerateViewConfigJs can generate fixture with a deprecated view config name 1`] = `
Map {
  "DEPRECATED_VIEW_CONFIG_NAMENativeViewConfig.js" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @flow
 *
 * @generated by codegen project: GenerateViewConfigJs.js
 */

'use strict';

const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');
const {UIManager} = require(\\"react-native\\")

let nativeComponentName = 'NativeComponentName';
if (UIManager.hasViewManagerConfig('NativeComponentName')) {
  nativeComponentName = 'NativeComponentName';
} else if (UIManager.hasViewManagerConfig('DeprecatedNativeComponentName')) {
  nativeComponentName = 'DeprecatedNativeComponentName';
} else {
  throw new Error('Failed to find native component for either \\"NativeComponentName\\" or \\"DeprecatedNativeComponentName\\"');
}

export const __INTERNAL_VIEW_CONFIG = {
  uiViewClassName: 'NativeComponentName',
  validAttributes: {},
};

export default NativeComponentRegistry.get(nativeComponentName, () => __INTERNAL_VIEW_CONFIG);
",
}
`;
